# Rlibstemmer

./: .Rbuildignore  .Rbuildignore-  ChangeLog  DESCRIPTION  NAMESPACE  README  configure  configure.in  localMakefile
R/: listAlgorithms.R  stemWord.R
autom4te.cache/: output.0  traces.0
inst/libstemmer_c/: Makefile
man/: wordStem.Rd
src/: Makevars  listAlgorithms.c  stemWords.c
tests/: languages.R  liu.R  walk.R
